[Cocoa] Web Inspector: handle Promise objects returned from evaluateScriptInExtensionTab https://bugs.webkit.org/show_bug.cgi?id=231709 <rdar://problem/84224179>

Reviewed by Timothy Hatcher.

Source/WebCore:

New API test: WKInspectorExtension.EvaluateScriptInExtensionTabCanReturnPromises

* inspector/InspectorFrontendAPIDispatcher.cpp:
(WebCore::InspectorFrontendAPIDispatcher::evaluateOrQueueExpression):
Add JSLockHolders for when we are poking at the result value.

Source/WebInspectorUI:

This patch improves the handling of promises and exceptions that come from
InspectorFrontendHost.evaluateScriptInExtensionTab().

For promises, wait for the returned promise to settle before fulfilling our returned value.
For errors, perform a better stringification of the Error instance. The is needed because
the default toString implementation leaves out most of the relevant details of the error.

* UserInterface/Controllers/WebInspectorExtensionController.js:
(WI.WebInspectorExtensionController.prototype.evaluateScriptInExtensionTab):

* UserInterface/Protocol/InspectorFrontendAPI.js:
Fix incorrect header docs for InspectorFrontendAPI.evaluateScriptForExtension.
Copy the improved header doc for InspectorFrontendAPI.evaluateScriptInExtensionTab
since it now has the same calling convention.

Source/WebKit:

* WebProcess/Inspector/WebInspectorUIExtensionController.cpp:
(WebKit::WebInspectorUIExtensionController::evaluateScriptForExtension):
(WebKit::WebInspectorUIExtensionController::evaluateScriptInExtensionTab):
Add JSLockHolders for when we are poking at the result value.
Drive-by, fix a typo in logging code.

Tools:

Add a new test:
WKInspectorExtension.EvaluateScriptInExtensionTabCanReturnPromises

* TestWebKitAPI/Tests/WebKitCocoa/WKInspectorExtension.mm:
(TEST):


Canonical link: https://commits.webkit.org/243072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284264 268f45cc-cd09-0410-ab3c-d52691b4dbfc